Tweak the wording used in email. Add open graph information to index.html.

--- a/projects/email/src/app/email/email-welcome/email-welcome.component.html
+++ b/projects/email/src/app/email/email-welcome/email-welcome.component.html
@@ -4,8 +4,11 @@ Header: @(email: String, username: Option[String])
 
 <div class="container mt-1 nue-email">
   <div class="d-none">
-    Welcome to the angular-universalize-email example web site.
-    angular-universalize-email is a free utility that allows an angular project to generate email templates using angular universal.
+    This welcome letter is powered by angular-universalize-email. This is an open source utility that
+    process angular pages into email templates with angular universal plus other conversions.
+
+    You can develop your email template with Angular, test it with ng serve.
+    Process it when you're happy and add the result to your server side stack.
   </div>
 
   <mat-card class="fill-x fill-t">
@@ -26,17 +29,18 @@ Header: @(email: String, username: Option[String])
       <p>This is a welcome letter powered by angular-universalize-email.</p>
 
       <p>
-        <a href="https://github.com/sohoffice/angular-universalize-email">angular-universalize-email</a> is an open source
-        utility that allows an angular project to generate email templates using angular universal.</p>
+        <a href="https://github.com/sohoffice/angular-universalize-email">angular-universalize-email</a> is an open source utility that
+        process angular pages into email templates with angular universal plus other conversions.</p>
 
       <p>
-        You can develop your email template with Angular, and add them to any server side technology.
+        You can develop your email template with Angular, test it with ng serve.
+        Process it when you're happy and add the result to your server side stack.
       </p>
 
       <p>
-        You may also pair it with cliend side template engine to produce the email body.
+        You may also choose to pair it with client side template engine to produce the full email body and feed the mail provider directly.
         <br/>
-        However, <b>this is not recommended.</b>
+        However, this may create relay and spam issue, so <b>is not recommended.</b>
       </p>
 
       <p>
@@ -44,11 +48,16 @@ Header: @(email: String, username: Option[String])
       </p>
 
       <div class="mb-3">
-        <h6>Read more</h6>
+        <b>Read more</b>
+        <br>
+
         <a href="https://github.com/sohoffice/angular-universalize-email" mat-button class="mr-1">Github</a>
         <a href="https://www.npmjs.com/package/angular-universalize-email" mat-button class="mr-1">NPM</a>
+        <a href="https://sohoffice.github.io/angular-universalize-email" mat-button class="mr-1">Demo</a>
+<!--
         <h6>Recipes</h6>
         <a href="" mat-button class="mr-1">Play framework scala template</a>
+-->
       </div>
 
       <p>
